--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,14 +13,16 @@ input {
 
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between ;
   align-items: center;
   padding: 0.5rem 1rem;
-  background: #000;
+  background: #233329;
+  height: 6rem;
 }
 
+
 #logo {
-  font-size: 1.5rem;
+  font-size: 3rem;
   font-weight: bold;
   text-decoration: none;
   color: #FFF;
@@ -37,6 +39,14 @@ nav ul {
 nav a {
   display: block;
   color: #FFF;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+
+}
+
+img {
+  height: 160px;
+  width: 280px;
 }
 
 form {
@@ -48,7 +58,72 @@ form {
 
 /* automatically added by NavLink component */
 .active {
-  color: #EEBC32;
+  color: #69FFF1;
   font-weight: bold;
   font-style: italic;
+}
+
+#main-text-box{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  margin-left: 100px;
+  margin-right: 100px;
+  justify-content: center;
+}
+
+ #home-header {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+#about-area{
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+#issue, #impacts, #solution{
+  display:block;
+  margin: auto;
+}
+#card {
+  max-width: 775px; 
+  height:auto;
+}
+ 
+#card {
+  /* background-color: green; */
+  border-radius: 2%;
+  border: 2px solid black;
+
+}
+
+#about-area-div {
+    display: flex;
+    margin-top: 10rem;
+    justify-content: center;
+
+}
+
+#about-img{
+  height:400px;
+  width:400px;
+}
+
+#about-text-div{
+  width:565px;
+
+}
+
+#be {
+  font-size: 4em;
+  margin: 0;
+}
+
+#about-header{
+  margin-top:5rem;
+  font-weight:700;
+  font-size: 3rem;
 }
