--- a/frontend/src/postCard.css
+++ b/frontend/src/postCard.css
@@ -6,43 +6,54 @@
 }
 
 body {
-  background-color: #f3fbfb;
+  /* background-color: #f3fbfb;
   font-family: "Open Sans", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
+  margin: 0; */
 }
 
 .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 20px;
   width: 940px;
+  justify-content: center;
+  padding-top: 40px;
   margin: auto;
+  place-items: center;
+  height: 300px;
 }
 
-.card {
-  background-color: #fff;
-  border-radius: 10px;
+.post-card {
+  /* background-color: #fff; */
+  background-color:  white;
+  border-radius: 100px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 300px;
+  width: 500px;
+  height: 700px;
+}
+
+.post-card-image {
+    padding: 6%
 }
 
 .card-header img {
   width: 100%;
-  height: 200px;
+  height: 350px;
   object-fit: cover;
+  
 }
 
 .card-body {
-  display: flex;
   flex-direction: column;
   align-items: start;
   padding: 20px;
-  min-height: 250px;
+  min-height: 50px;
+  
 }
 
 .tag {
@@ -57,6 +68,7 @@ body {
 
 .tag-teal {
   background-color: #92d4e4;
+  
 }
 
 .tag-purple {
