--- a/frontend/src/postCard.css
+++ b/frontend/src/postCard.css
@@ -37,11 +37,11 @@ body {
   height: 700px;
 }
 
-.post-card-image {
+.post-card-imge {
     padding: 6%
 }
 
-.card-header img {
+.card-header-image {
   width: 100%;
   height: 350px;
   object-fit: cover;
