--- a/frontend/src/postCard.css
+++ b/frontend/src/postCard.css
@@ -13,6 +13,8 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0; */
+  /* background-color: #32de84; */
+
 }
 
 .container {
@@ -53,8 +55,18 @@ body {
   align-items: start;
   padding: 20px;
   min-height: 50px;
-  
+  background-color: #baedd1;
 }
+
+.card-body123 {
+    flex-direction: column;
+    align-items: start;
+    padding: 20px;
+    min-height: 50px;
+    /* background-color: #baedd1; */
+  }
+  
+
 
 .tag {
   background-color: #ccc;
@@ -88,6 +100,7 @@ body {
   margin: 0 0 40px 0;
   font-weight: 500;
   color: rgb(70, 68, 68);
+
 }
 
 .user {
