--- a/frontend/src/postCard.css
+++ b/frontend/src/postCard.css
@@ -35,6 +35,8 @@ body {
   border-radius: 100px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  max-width: 500px;
+  max-height: 700px;
   width: 500px;
   height: 700px;
 }
@@ -59,6 +61,7 @@ body {
 }
 
 .card-body123 {
+    height: 50%;
     flex-direction: column;
     align-items: start;
     padding: 20px;
