--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,7 +53,7 @@ nav a {
 	
 	margin: auto;
 	/* background-color: #baedd1; */
-	background-color: #32de84;
+	background-color: #51e897;
 	justify-items: center;
 	padding-bottom: 20px;
 
