--- a/frontend/src/postCard.css
+++ b/frontend/src/postCard.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+/* #divBody{
+    background-color: #3d1d94;
+} */
+
+
+
 body {
   /* background-color: #f3fbfb;
   font-family: "Open Sans", sans-serif;
@@ -14,10 +20,12 @@ body {
   height: 100vh;
   margin: 0; */
   /* background-color: #32de84; */
+  /* background-color: #baedd1; */
 
 }
 
 .container {
+    /* background-color: #baedd1; */
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 20px;
@@ -27,11 +35,14 @@ body {
   margin: auto;
   place-items: center;
   height: 300px;
+  /* background-color: black; */
 }
 
 .post-card {
   /* background-color: #fff; */
-  background-color:  white;
+  /* background-color: white; */
+  background-color: #51e897;
+  /* background-color: #32de84; */
   border-radius: 100px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -39,9 +50,30 @@ body {
   height: 700px;
 }
 
-.post-card-imge {
-    padding: 6%
-}
+/* .post-card-image {
+    border-radius: 100px;
+    padding: 2%;
+    width: 100%;
+    height: 100%;
+} */
+
+.post-card-image {
+    padding: 10px;
+  }
+  
+
+/* .post-card-image {
+    width: 100%;
+    height: 100%;
+    max-height: 340px;
+    /* min-height: 340px; */
+    /* background-color: black; */
+    /* border: 2px solid #000; */
+    /* border-radius: px; */
+    /* object-fit: cover; */
+    /* margin: 500px; */
+    
+  /* } */ 
 
 .card-header-image {
   width: 100%;
@@ -50,36 +82,66 @@ body {
   
 }
 
-.card-body {
+/* .card-body {
   flex-direction: column;
   align-items: start;
   padding: 20px;
   min-height: 50px;
-  background-color: #baedd1;
-}
+  background-color: #51e897;
+} */
+
+.card-body p {
+    font-size: 16px; /* Adjust the font size as desired */
+    margin: 0 0 40px 0;
+    font-weight: 500;
+    color: rgb(70, 68, 68);
+  }
+  
 
 .card-body123 {
+    width: 100%;
+    height: 100%;
+    font-size: 24;
     flex-direction: column;
     align-items: start;
     padding: 20px;
     min-height: 50px;
+    font-size: 20px;
     /* background-color: #baedd1; */
   }
   
+  #formCard{
+    
+    /* display: flex; */
+    /* justify-items: center; */
+  }
+/* formGroup {
+    display: center;
+} */
 
+.form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    
+  }
+  
 
 .tag {
   background-color: #ccc;
-  color: #fff;
+  color: black;
+  font-weight: bold;
   border-radius: 50px;
-  font-size: 12px;
+  font-size: 20px;
   margin: 0;
   padding: 2px 10px;
   text-transform: uppercase;
 }
 
 .tag-teal {
-  background-color: #92d4e4;
+  /* background-color: #92d4e4; */
+  background-color: #51e897;
   
 }
 
@@ -103,9 +165,34 @@ body {
 
 }
 
+button{
+    /* display: flex; */
+    background-color: white;
+    
+
+
+    
+}
+
+/* #deleteButton{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+} */
+
+#deleteButton {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: auto;
+  }
+  
+
 .user {
+  /* display: flex; */
+  /* margin-top: auto; */
   display: flex;
-  margin-top: auto;
+  justify-items: center;
 }
 
 .user img {
